Version 2.9 - workaround for printpreview image over multiple pages problem - value in printpreview seems now too high but kind of works - fixes #21 for now

--- a/templates/css/printpreview.css
+++ b/templates/css/printpreview.css
@@ -3,8 +3,7 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #FAFAFA;
-    font: 12pt "Tahoma";
+    background-color: #ffffff;
 }
 
 .page {
@@ -13,6 +12,11 @@ body {
     padding: 20mm;
     margin: 10mm auto;
     background: white;
+}
+
+img.printpreviewmaxwidthlimit {
+    max-width: 100%;
+    max-height: 290mm; /* not sure about this value - seems too high (complete page hight is 297mm, minus padding and boxed div should be less...) but is kind of working */
 }
 
 a.printpreview:link {
